# opys

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix  gemini-extension.json  opencode.json  package.json  release-plz.toml  rulesync.jsonc
.agents/skills/: feature-inventory.md
.agents/skills/feature-inventory/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/feature-inventory/: SKILL.md
.claude/skills/feature-inventory/references/: format.md
.codex-plugin/: plugin.json
.cursor/rules/: feature-inventory.mdc
.cursor/skills/feature-inventory/: SKILL.md
.github/workflows/: ci.yml  release-plz.yml
.rulesync/skills/feature-inventory/: SKILL.md
crates/mdprism/: CHANGELOG.md  Cargo.toml
crates/mdprism/src/: edit.rs  error.rs  lib.rs  parse.rs  query.rs  render.rs  schema.rs  validate.rs
docs/: mdprism-reference.md  structure-dsl-spec.md
pi-extension/: index.js
scripts/: sync-versions.sh
skills/feature-inventory/: SKILL.md
skills/feature-inventory/references/: format.md
skills/opys/: SKILL.md  agent-rule.md
skills/opys/references/: format.md  work-items.md
src/: body.rs  cli.rs  config.rs  doc.rs  error.rs  feature.rs  file_refs.rs  frontmatter.rs  lib.rs  links.rs  main.rs  palette.rs  project.rs  project_config.rs  refs.rs  rules.rs  schema.rs  templates.rs  work_item.rs
src/commands/: agent_rules.rs  block.rs  cleanup.rs  close.rs  config.rs  history.rs  import.rs  init.rs  list.rs  mod.rs  new.rs  renumber.rs  report.rs  retire.rs  runbook.rs  schema.rs  set_status.rs  show.rs  stats.rs  sync.rs  sync_views.rs  tag.rs  tags.rs  verify.rs
src/commands/work_item/: cleanup.rs  close.rs  init.rs  list.rs  mod.rs  new.rs  set_status.rs  show.rs  tag.rs
src/mdprism/: edit.rs  mod.rs  parse.rs  query.rs  render.rs  validate.rs
src/tui/: app.rs  data.rs  event.rs  filter.rs  form.rs  markdown.rs  mod.rs  save.rs  sort.rs  textarea.rs  theme.rs  view.rs
tests/: cli.rs
