[package]
name = "opys"
version = "0.5.1"
edition = "2021"
rust-version = "1.88"
description = "File-based feature inventory for human + AI codebases — one markdown file per feature, verified in CI"
license = "Apache-2.0"
repository = "https://github.com/BohdanTkachenko/opys"
readme = "README.md"
keywords = ["feature-inventory", "traceability", "cli", "markdown", "ci"]
categories = ["command-line-utilities", "development-tools"]
# skills/ is shipped: src/templates.rs embeds skills/opys/agent-rule.md.
# The multi-agent packaging manifests are not part of the crate.
exclude = [
    ".github/",
    ".claude-plugin/",
    ".codex-plugin/",
    "pi-extension/",
    "package.json",
    "gemini-extension.json",
    "opencode.json",
]

[lib]
name = "opys"
path = "src/lib.rs"

[[bin]]
name = "opys"
path = "src/main.rs"

[features]
default = []
# The interactive terminal UI (`opys tui`). Off by default so the standard
# `cargo install opys` stays lean; build with `--features tui` to include it.
tui = ["dep:ratatui", "dep:notify-debouncer-full"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
toml = "0.8"
regex = "1"
walkdir = "2"
anyhow = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset", "macros"] }

# TUI stack (optional, enabled by the `tui` feature). crossterm is used via
# ratatui's re-export (`ratatui::crossterm`) to avoid version skew.
ratatui = { version = "0.29", optional = true }
notify-debouncer-full = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"
