[package]
name = "mdprism"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
description = "Markdown ⇄ data, via a template: validate, extract, render, query, and edit markdown documents against a compact schema DSL"
license = "Apache-2.0"
repository = "https://github.com/BohdanTkachenko/opys"
keywords = ["markdown", "schema", "validation", "template", "codec"]
categories = ["parsing", "text-processing"]

[dependencies]
regex = "1"
serde_json = "1"
thiserror = "1"
# comrak (CommonMark AST + sourcepos) and jaq (queries) are added in later
# phases — see docs/structure-dsl-spec.md §9, §13.

[dev-dependencies]
