[package]
name = "mdprism"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
# Internal workspace crate — an implementation detail of `opys`, not published.
publish = false
description = "Markdown ⇄ data, via a template: validate, extract, render, query, and edit markdown documents against a compact schema DSL"
license = "Apache-2.0"
repository = "https://github.com/BohdanTkachenko/opys"
keywords = ["markdown", "schema", "validation", "template", "codec"]
categories = ["parsing", "text-processing"]

[dependencies]
regex = "1"
serde_json = "1"
thiserror = "1"
comrak = "0.52"
jaq-core = "3.1.0"
jaq-json = "2.0.1"
jaq-std = "3.0.1"

[dev-dependencies]
